# CloudMarker

./: README.md
assets/: bag_play_0.webm  bag_play_2.webm
ros2_ws/src/ass1_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/ass1_perception/ass1_perception/: cylinder_detector.py
ros2_ws/src/ass1_perception/launch/: rgbd_bag_0.launch.py  rgbd_bag_1.launch.py  rgbd_bag_2.launch.py
ros2_ws/src/lab3_motion/: package.xml  setup.cfg  setup.py
ros2_ws/src/lab3_motion/lab3_motion/: robot_drive.py
ros2_ws/src/lab4_obstacle_avoidance/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/lab4_obstacle_avoidance/lab4_obstacle_avoidance/: reactive_navigator.py
ros2_ws/src/lab4_obstacle_avoidance/launch/: turtlebot_bringup.launch.py
